Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45535

Properly document "private" signals

XMLWordPrintable

    • aea74dcaee2d6930e4d69cbda83088703b45816e, 92ea91836eedcf34e09df6b2bd3c34f0468acc49

      Some signals have a QPrivateSignal argument that forbids their emission from outside the class.

      Such an argument is currently ignored by qdoc by means of #ifdef macros. Instead I think that qdoc should recognize it and add a note in the documentation that the signal is not supposed to be emitted directly by the user.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            gbk Martin Smith (Qt)
            peppe Giuseppe D'Angelo
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes